--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,18 @@
-<h2>!111!</h2>
-<test></test>
-<app-test2></app-test2>
+<h2>main_app_component</h2>
+<nav>
+  <ul>
+    <li>
+      <a routerLink="/app-test" routerLinkActive="active">
+        test_1
+      </a>
+    </li>
+    <li>
+      <a routerLink="/app-test2" routerLinkActive="active">
+        test_2
+      </a>
+    </li>
+  </ul>
+</nav>
+<router-outlet></router-outlet>
+<!--<app-test></app-test>-->
+<!--<app-test2></app-test2>-->
