colored input double_bind

--- a/src/app/components/test/test.component.html
+++ b/src/app/components/test/test.component.html
@@ -1,1 +1,9 @@
-<p>test_1</p>
+<div class="input-wrap">
+  <h2 [ngStyle]="checkType()">{{text}}</h2>
+  <input
+    type="text"
+    [ngStyle]="checkType()"
+    [(ngModel)]="text"
+    [placeholder]="text"
+  >
+</div>
